--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,3 @@
-# version: '3.8'
-# services:
-#   spark-master:
-#       build: .
-#       image: cs-spark-master
-#       command: bin/spark-class org.apache.spark.deploy.master.Master
-#       ports:
-#         - "9090:8080"
-#         - "7077:7077"
-#       networks:
-#         - confluent
-#   spark-worker:
-#     build: .
-#     image: cs-spark-worker
-#     command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
-#     depends_on:
-#       - spark-master
-#     environment:
-#       SPARK_MODE: worker
-#       SPARK_WORKER_CORES: 2
-#       SPARK_WORKER_MEMORY: 1g
-#       SPARK_MASTER_URL: spark://spark-master:7077
-#     networks:
-#       - confluent
-
-# networks:
-#   confluent:
-
-
 version: '3.8'
 
 services:
@@ -41,7 +12,7 @@ services:
       timeout: 3s
       retries: 3
     volumes:
-      - ./book_data:/opt/spark/data
+      - ./data:/opt/spark/data
       - ./apps:/opt/spark/apps
       - spark-logs:/opt/spark/spark-events
     env_file:
@@ -76,11 +47,60 @@ services:
     env_file:
       - .env.spark
     volumes:
-      - ./book_data:/opt/spark/data
+      - ./data:/opt/spark/data
       - ./apps:/opt/spark/apps
       - spark-logs:/opt/spark/spark-events
     networks:
       - confluent
+
+  webserver:
+    image: apache/airflow:2.6.0-python3.9
+    command: webserver
+    entrypoint: ['/opt/airflow/script/entrypoint.sh']
+    # depends_on:
+    #   - postgres
+    environment:
+      - LOAD_EX=n
+      - EXECUTOR=Sequential
+      # - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+      - AIRFLOW_WEBSERVER_SECRET_KEY=this_is_a_very_secured_key
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - ./scripts/airflow/entrypoint.sh:/opt/airflow/script/entrypoint.sh
+      - ./requirements.txt:/opt/airflow/requirements.txt
+    ports:
+      - "8095:8080"
+    healthcheck:
+      test: ['CMD-SHELL', "[ -f /opt/airflow/airflow-webserver.pid ]"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+    networks:
+      - confluent
+
+  scheduler:
+    image: apache/airflow:2.6.0-python3.9
+    depends_on:
+      webserver:
+        condition: service_healthy
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - ./scripts/airflow/entrypoint.sh:/opt/airflow/script/entrypoint.sh
+      - ./requirements.txt:/opt/airflow/requirements.txt
+    environment:
+      - LOAD_EX=n
+      - EXECUTOR=Sequential
+      # - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+      - AIRFLOW_WEBSERVER_SECRET_KEY=this_is_a_very_secured_key
+    command: bash -c "pip install -r ./requirements.txt && airflow db upgrade && airflow scheduler"
+    networks:
+      - confluent
+
+
 volumes:
   spark-logs:
 
